@@ -1,4 +1,4 @@
-package io.github.martinschneider.orzo.scanner;
+package io.github.martinschneider.orzo.lexer;
 
 import static io.github.martinschneider.orzo.lexer.tokens.Comparators.EQUAL;
 import static io.github.martinschneider.orzo.lexer.tokens.Comparators.GREATER;
@@ -37,12 +37,10 @@ import static io.github.martinschneider.orzo.lexer.tokens.Token.scope;
 import static io.github.martinschneider.orzo.lexer.tokens.Token.str;
 import static io.github.martinschneider.orzo.lexer.tokens.Token.sym;
 import static io.github.martinschneider.orzo.lexer.tokens.Token.type;
+import static java.util.Collections.emptyList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
-import io.github.martinschneider.orzo.lexer.Lexer;
-import io.github.martinschneider.orzo.lexer.TokenList;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.stream.Stream;
 import org.junit.jupiter.api.Test;
@@ -58,75 +56,82 @@ public class LexerTest {
         Arguments.of(
             "das ist ein test",
             new TokenList(List.of(id("das"), id("ist"), id("ein"), id("test")))),
-        Arguments.of("f1 f_1", List.of(id("f1"), id("f_1"))),
-        Arguments.of("12  13 15 17", List.of(integer(12), integer(13), integer(15), integer(17))),
-        Arguments.of("0.9", List.of(fp(0.9))),
-        Arguments.of(".87", List.of(fp(0.87))),
+        Arguments.of("f1 f_1", new TokenList(List.of(id("f1"), id("f_1")))),
+        Arguments.of(
+            "12  13 15 17",
+            new TokenList(List.of(integer(12), integer(13), integer(15), integer(17)))),
+        Arguments.of("0.9", new TokenList(List.of(fp(0.9)))),
+        Arguments.of(".87", new TokenList(List.of(fp(0.87)))),
         Arguments.of(
             "1+2-3*4/5%6=7",
-            List.of(
-                integer(1),
-                op(PLUS),
-                integer(2),
-                op(MINUS),
-                integer(3),
-                op(TIMES),
-                integer(4),
-                op(DIV),
-                integer(5),
-                op(MOD),
-                integer(6),
-                op(ASSIGN),
-                integer(7))),
+            new TokenList(
+                List.of(
+                    integer(1),
+                    op(PLUS),
+                    integer(2),
+                    op(MINUS),
+                    integer(3),
+                    op(TIMES),
+                    integer(4),
+                    op(DIV),
+                    integer(5),
+                    op(MOD),
+                    integer(6),
+                    op(ASSIGN),
+                    integer(7)))),
         Arguments.of(
             "7<8<=9>10>=11!=12==13",
-            List.of(
-                integer(7),
-                cmp(SMALLER),
-                integer(8),
-                cmp(SMALLEREQ),
-                integer(9),
-                cmp(GREATER),
-                integer(10),
-                cmp(GREATEREQ),
-                integer(11),
-                cmp(NOTEQUAL),
-                integer(12),
-                cmp(EQUAL),
-                integer(13))),
-        Arguments.of(".x", List.of(sym(DOT), id("x"))),
+            new TokenList(
+                List.of(
+                    integer(7),
+                    cmp(SMALLER),
+                    integer(8),
+                    cmp(SMALLEREQ),
+                    integer(9),
+                    cmp(GREATER),
+                    integer(10),
+                    cmp(GREATEREQ),
+                    integer(11),
+                    cmp(NOTEQUAL),
+                    integer(12),
+                    cmp(EQUAL),
+                    integer(13)))),
+        Arguments.of(".x", new TokenList(List.of(sym(DOT), id("x")))),
         Arguments.of(
             "noch.ein,test;",
-            List.of(id("noch"), sym(DOT), id("ein"), sym(COMMA), id("test"), sym(SEMICOLON))),
+            new TokenList(
+                List.of(id("noch"), sym(DOT), id("ein"), sym(COMMA), id("test"), sym(SEMICOLON)))),
         Arguments.of(
             "String x = \"Halleluja!\"",
-            List.of(type("String"), id("x"), op(ASSIGN), str("Halleluja!"))),
+            new TokenList(List.of(type("String"), id("x"), op(ASSIGN), str("Halleluja!")))),
         Arguments.of(
             "void int double String",
-            List.of(type("void"), type("int"), type("double"), type("String"))),
+            new TokenList(List.of(type("void"), type("int"), type("double"), type("String")))),
         Arguments.of(
             "if else do while for return static class package",
-            List.of(
-                keyword(IF),
-                keyword(ELSE),
-                keyword(DO),
-                keyword(WHILE),
-                keyword(FOR),
-                keyword(RETURN),
-                keyword(STATIC),
-                keyword(CLASS),
-                keyword(PACKAGE))),
+            new TokenList(
+                List.of(
+                    keyword(IF),
+                    keyword(ELSE),
+                    keyword(DO),
+                    keyword(WHILE),
+                    keyword(FOR),
+                    keyword(RETURN),
+                    keyword(STATIC),
+                    keyword(CLASS),
+                    keyword(PACKAGE)))),
         Arguments.of(
-            "public private protected", List.of(scope(PUBLIC), scope(PRIVATE), scope(PROTECTED))),
-        Arguments.of("/* das ist ein kommentar */ /*und noch einer*/", Collections.emptyList()),
-        Arguments.of("// test \\n", Collections.emptyList()),
+            "public private protected",
+            new TokenList(List.of(scope(PUBLIC), scope(PRIVATE), scope(PROTECTED)))),
+        Arguments.of("/* das ist ein kommentar */ /*und noch einer*/", new TokenList(emptyList())),
+        Arguments.of("// test \\n", new TokenList(emptyList())),
         Arguments.of(
-            "/* abc//123\"\"\\$@ */ /*und noch einer*/\n//x=y+1;\n", Collections.emptyList()),
-        Arguments.of("// test", Collections.emptyList()),
-        Arguments.of("/* /* /* test */ */ */", Collections.emptyList()),
+            "/* abc//123\"\"\\$@ */ /*und noch einer*/\n//x=y+1;\n", new TokenList(emptyList())),
+        Arguments.of("// test", new TokenList(emptyList())),
+        Arguments.of("/* /* /* test */ */ */", new TokenList(emptyList())),
         Arguments.of(
             "System.out.println",
-            List.of(id("System"), sym(DOT), id("out"), sym(DOT), id("println"))));
+            new TokenList(List.of(id("System"), sym(DOT), id("out"), sym(DOT), id("println")))));
   }
 
   @MethodSource
